test_dataset/python/python1/bad/systems_tasks.py
import os

def run_backup(params):
    folder = params['folder_name']
    # Vulnerable to command injection
    os.system("tar -czf backup.tar.gz " + folder)
